--- a/StyleAct.css
+++ b/StyleAct.css
@@ -8,7 +8,7 @@
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)),url(newbackground.png);
+    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)),url(actbackground.png);
     background-size: cover;
     background-position: center;
 }
@@ -57,10 +57,10 @@
 }
 
 .container{
-    color: rgb(255, 255, 255);
-    width: 100%;
-    top: 35%;
-    transform: translateY(-50%);
-    position: absolute;
-    text-align: center;
-    }
+color: rgb(255, 255, 255);
+width: 100%;
+top: 35%;
+transform: translateY(-50%);
+position: absolute;
+text-align: center;
+}
